--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,8 @@
     "angular-cookies": "^1.4.0",
     "angular-route": "^1.4.0",
     "angular-bootstrap": "^1.1.2",
-    "animate.css": "^3.5.1"
+    "animate.css": "^3.5.1",
+    "fs-angular-prettytime": "~1.0.3"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
